# serial-terminal

./: .gitignore  LICENSE  README.md  pyproject.toml  serial_terminal.py
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-12-network-transport.md
docs/superpowers/specs/: 2026-06-12-network-transport-design.md
tests/: conftest.py  test_gui_conn_type.py  test_gui_language.py  test_i18n.py  test_list_ports.py  test_macro_convert.py  test_newline_filter.py  test_transports.py  test_tx_convert.py
