[project]
name = "serial-terminal"
version = "0.1.0"
description = "クロスプラットフォーム対応 シリアルポート バイナリ・ASCII 送受信エディタ"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
serial-terminal = "serial_terminal:main"

[dependency-groups]
build = [
    "pyinstaller>=6.0; python_version >= '3.10'",
]

# Linux/WSL では uv 管理 Python (python-build-standalone) の Tk が Xft 非対応で
# 日本語が文字化けするため、Xft 対応 Tk を持つシステム Python (python3-tk) を優先する。
# システム Python が無い環境 (Windows 等) では従来どおり uv 管理 Python に
# フォールバックする (Windows の Tk は GDI 描画なので問題なし)。
[tool.uv]
python-preference = "system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["serial_terminal.py"]
